--- a/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
@@ -187,7 +187,17 @@
                         </div>
                     </div>
                     <div class="uk-card-body">
-                        <h:form id="formulario-tabla-colonia">
+                        <h:form id="formulario-tabla-colonia" styleClass="uk-form-stacked">
+                            <h:panelGroup layout="block" styleClass="uk-margin-small-top" pt:uk-grid="">
+                                <div class="uk-width-1-3">
+                                    <h:outputLabel for="entrada-estado" value="estado" styleClass="uk-text-capitalize letra-desabilitada-negra"/>
+                                    <h:inputText id="entrada-estado" value="#{catalogoColoniaControlador.estado}" styleClass="uk-input  uk-text-bold" disabled="true"/>
+                                </div>
+                                <div class="uk-width-2-3">
+                                    <h:outputLabel for="entrada-municipio" value="municipio" styleClass="uk-text-capitalize letra-desabilitada-negra"/>
+                                    <h:inputText id="entrada-municipio" value="#{catalogoColoniaControlador.municipio}" styleClass="uk-input  uk-text-bold" disabled="true"/>
+                                </div>
+                            </h:panelGroup>
                             <ui:fragment rendered="#{empty catalogoColoniaControlador.collectionDataModel.wrappedData}">
                                 <table class="uk-table uk-table-middle">
                                     <thead class="uk-background-primary">
@@ -266,7 +276,7 @@
                                         <h:inputText styleClass="uk-input uk-form-width-small uk-text-left uk-margin-right"
                                                      id="form-horizontal-text"
                                                      binding="#{catalogoColoniaControlador.uiInputColonia}"
-                                                     value="#{catalogoColoniaControlador.codigoPostal}"
+                                                     value="#{catalogoColoniaControlador.coloniaModelo.codigoPostal}"
                                                      pt:placeholder="Codigo Postal">
                                             <f:validateRequired/>
                                             <f:validateLength minimum="4" maximum="5"/>
@@ -370,6 +380,9 @@
                     </div>
                 </h:form>
             </div>
+        </h:panelGroup>
+        <h:panelGroup layout="block" id="modal-agrega-colonia" pt:uk-modal="">
+
         </h:panelGroup>
         <script type="text/javascript">
             var modalEditar;
