Servicio de coordinador, actualiza un coordinador

--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -114,10 +114,10 @@
                             </div>
                         </div>
                         <h:panelGroup layout="block" styleClass="uk-width-2-5@m uk-width-1-1@s uk-inline" rendered="true">
-                            <h:commandLink styleClass="uk-button uk-button-primary uk-position-bottom-right">
+                            <h:link styleClass="uk-button uk-button-primary uk-position-bottom-right" outcome="coordinador">
                                 <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
                                 <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
-                            </h:commandLink>
+                            </h:link>
                          </h:panelGroup>
                     </h:panelGroup>
                 </h:form>
