--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -117,6 +117,7 @@
                             <h:link styleClass="uk-button uk-button-primary uk-position-bottom-right" outcome="coordinador">
                                 <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
                                 <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
+                                <f:param name="escuela" value="#{param['escuela']}"/>
                             </h:link>
                          </h:panelGroup>
                     </h:panelGroup>
